# PubLiMiner

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  RUNBOOK.md  publiminer.yaml  pyproject.toml  run_nightly.bat  run_ui.bat
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
docs/: architecture.md
projects/: cardiac_ct.yaml  cardiac_mri.yaml
scripts/: generate_pipeline_pdf.py  migrate_parquet.py  quick_viz.py
scripts/per-project/: bern_analysis.py  build_journal_registry.py  export_run_json.py  generate_G1b_G1c_maps.py  generate_analysis.py  generate_word_report.py  visualize_run.py
src/publiminer/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py
src/publiminer/commands/: __init__.py  setup.py
src/publiminer/core/: base_step.py  cache.py  config.py  default.yaml  extraction_db.py  global_schema.py  io.py  models.py  openrouter.py  spine.py
src/publiminer/steps/: __init__.py
src/publiminer/steps/deduplicate/: __init__.py  default.yaml  schema.py  step.py
src/publiminer/steps/extract/: __init__.py  author_mapper.py  default.yaml  prompt.py  repair.py  schema.py  schema_builder.py  step.py
src/publiminer/steps/fetch/: __init__.py  default.yaml  pubmed_client.py  schema.py  step.py
src/publiminer/steps/filter/: __init__.py  default.yaml  schema.py  step.py
src/publiminer/steps/parse/: __init__.py  default.yaml  schema.py  step.py  xml_parser.py
src/publiminer/templates/: __init__.py  publiminer.starter.yaml
src/publiminer/ui/: __init__.py  app.py  setup_panel.py
src/publiminer/utils/: affiliation_parser.py  batching.py  env.py  legacy_import.py  logger.py  progress.py  rate_limiter.py
tests/: conftest.py  test_cli_smoke.py  test_extract_step.py  test_extraction_db.py  test_fetch_extract.py  test_openrouter_client.py  test_parse.py  test_schema_builder.py  test_setup_wizard.py  test_spine.py
